--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
+  "homepage": "https://olena-hapon.github.io/Portfolio/",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "predeploy": "next build",
+    "deploy": "gh-pages -d build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -17,6 +20,7 @@
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.2.1"
+    "eslint-config-next": "14.2.1",
+    "gh-pages": "^6.1.1"
   }
 }
